修改废弃的方法